server/compilers/goLiteJS/src/test/ml1/invalid/decl14.go
// unbalanced tuple assignment
package main

var x1 = 2, 3
